@startuml Trinity System - Class Diagram

!define ENTITY class
!define PRIMARY_KEY <b>PK</b>
!define FOREIGN_KEY <b>FK</b>

skinparam classAttributeIconSize 0
skinparam linetype ortho

' Django User Model (Built-in)
class User {
  +id: INTEGER PRIMARY_KEY
  +username: VARCHAR(150)
  +password: VARCHAR(128)
  +email: VARCHAR(254)
  +first_name: VARCHAR(150)
  +last_name: VARCHAR(150)
  +is_staff: BOOLEAN
  +is_active: BOOLEAN
  +is_superuser: BOOLEAN
  +date_joined: DATETIME
  +last_login: DATETIME
}

' Customer Model
class Customer {
  +id: INTEGER PRIMARY_KEY
  +user_id: INTEGER FOREIGN_KEY
  +first_name: VARCHAR(100)
  +last_name: VARCHAR(100)
  +phone_number: VARCHAR(20)
  +email: VARCHAR(254) UNIQUE
  +address: TEXT
  +zip_code: VARCHAR(20)
  +city: VARCHAR(100)
  +country: VARCHAR(100)
  +created_at: DATETIME
  +updated_at: DATETIME
  +is_active: BOOLEAN
  --
  +full_name(): STRING
  +full_address(): STRING
  +__str__(): STRING
}

' Category Model
class Category {
  +id: INTEGER PRIMARY_KEY
  +name: VARCHAR(100) UNIQUE
  +description: TEXT
  +created_at: DATETIME
  --
  +__str__(): STRING
}

' Product Model
class Product {
  +id: INTEGER PRIMARY_KEY
  +category_id: INTEGER FOREIGN_KEY
  +name: VARCHAR(255)
  +brand: VARCHAR(100)
  +price: DECIMAL(10,2)
  +picture: IMAGE
  +picture_url: VARCHAR(500)
  +quantity_in_stock: INTEGER
  +energy_kcal: DECIMAL(8,2)
  +fat: DECIMAL(8,2)
  +saturated_fat: DECIMAL(8,2)
  +carbohydrates: DECIMAL(8,2)
  +sugars: DECIMAL(8,2)
  +proteins: DECIMAL(8,2)
  +salt: DECIMAL(8,2)
  +fiber: DECIMAL(8,2)
  +description: TEXT
  +barcode: VARCHAR(50) UNIQUE
  +openfoodfacts_id: VARCHAR(100) UNIQUE
  +last_synced: DATETIME
  +created_at: DATETIME
  +updated_at: DATETIME
  +is_active: BOOLEAN
  --
  +is_in_stock(): BOOLEAN
  +stock_status(): STRING
  +__str__(): STRING
}

' Invoice Model
class Invoice {
  +id: INTEGER PRIMARY_KEY
  +customer_id: INTEGER FOREIGN_KEY
  +invoice_number: VARCHAR(50) UNIQUE
  +status: VARCHAR(20)
  +payment_method: VARCHAR(20)
  +subtotal: DECIMAL(10,2)
  +tax_rate: DECIMAL(5,2)
  +tax_amount: DECIMAL(10,2)
  +total_amount: DECIMAL(10,2)
  +paypal_transaction_id: VARCHAR(100)
  +paypal_payer_email: VARCHAR(254)
  +notes: TEXT
  +created_at: DATETIME
  +updated_at: DATETIME
  +paid_at: DATETIME
  --
  +calculate_totals(): VOID
  +total_items(): INTEGER
  +save(): VOID
  +__str__(): STRING
}

' InvoiceItem Model
class InvoiceItem {
  +id: INTEGER PRIMARY_KEY
  +invoice_id: INTEGER FOREIGN_KEY
  +product_id: INTEGER FOREIGN_KEY
  +quantity: INTEGER
  +unit_price: DECIMAL(10,2)
  +total_price: DECIMAL(10,2)
  +product_name: VARCHAR(255)
  +product_brand: VARCHAR(100)
  +created_at: DATETIME
  --
  +save(): VOID
  +__str__(): STRING
}

' Relationships
User "1" -- "0..1" Customer : has profile
Customer "1" -- "0..*" Invoice : places
Category "1" -- "0..*" Product : contains
Product "1" -- "0..*" InvoiceItem : appears in
Invoice "1" *-- "1..*" InvoiceItem : contains

' Notes
note right of Product
  Integrates with Open Food Facts API
  for automatic product data sync
  using barcode lookup
end note

note right of Invoice
  Auto-generates invoice number
  in format: INV-YYYYMMDD-XXXX
  Supports multiple payment methods
end note

note right of InvoiceItem
  Stores product snapshot
  at time of purchase
  to preserve historical data
end note

note right of Customer
  Can be linked to User
  for authentication or
  exist independently
end note

@enduml
